Imagens de fundo - modifiquei o fundo - alterando (tipo de inspeção, Eixos, Município e equipamento) - alterando colunas - alterando colunas(1). - alterando colunas (1.2). - modificando(eixo equipe técnica) - (alterando tabela inteligente1.1) - (modificando tabela condensada e tabela inteligente) - (modificando parte fale conosco e perguntas frequentes 1.1) - (tabela condesada ok) -

--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -102,9 +102,6 @@
     </table>
       </div>
 
-      <div class="row">
-        </div>
-
 
       <ba-card title="QUESTÕES" baCardClass="with-scroll heading-widget">
 
@@ -148,10 +145,221 @@
         </ba-card>
 
 
+
+
+
+        <div class="horizontal-scroll">
+          <table class="table table-hover">
+            <thead>
+            <tr class="black-muted-bg">
+              <td><h2><b>CRAS - BARRA DO PIRAÍ - CENTRO </b></h2></td>
+            </tr>
+            </thead>
+          </table>
+        </div>
+
+
+
+        <div class="bs-example">
+          <table class="table table-condensed">
+            <thead>
+            <tr>
+              <th></th>
+              <th><b>JANEIRO/2016</b></th>
+              <th><b>MARÇO/2016</b></th>
+              <th><b>MAIO/2016</b></th>
+
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+              <td></td>
+              <td><b>SIM</b></td>
+              <td><b>SIM</b></td>
+              <td><b>NÃO</b></td>
+
+            </tr>
+            <tr>
+              <td></td>
+              <td><b>NÃO</b></td>
+              <td><b>SIM</b></td>
+              <td><b>SIM</b></td>
+
+            </tr>
+            <tr>
+              <td></td>
+              <td><b>SIM</b></td>
+              <td><b>SIM</b></td>
+              <td><b>SIM</b></td>
+
+            </tr>
+            <tr>
+              <td></td>
+              <td><b>SIM</b></td>
+              <td><b>SIM</b></td>
+              <td><b>SIM</b></td>
+
+            </tr>
+            <tr>
+              <td></td>
+              <td><b>SIM</b></td>
+              <td><b>SIM</b></td>
+              <td><b>SIM</b></td>
+
+            </tr>
+            <tr>
+              <td></td>
+              <td><b>NÃO</b></td>
+              <td><b>NÃO</b></td>
+              <td><b>NÃO</b></td>
+
+            </tr>
+            </tbody>
+          </table>
+        </div>
+
+
+        <div class="horizontal-scroll">
+          <table class="table table-hover">
+            <thead>
+            <tr class="black-muted-bg">
+              <td><h2><b>CRAS - BARRA DO PIRAÍ - CALIFÓRNIA DA BARRA </b></h2></td>
+            </tr>
+            </thead>
+          </table>
+        </div>
+
+
+        <div class="bs-example">
+          <table class="table table-condensed">
+            <thead>
+            <tr>
+              <th></th>
+              <th><b>JANEIRO/2016</b></th>
+              <th><b>MARÇO/2016</b></th>
+              <th><b>MAIO/2016</b></th>
+
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+              <td></td>
+              <td><b>NÃO</b></td>
+              <td><b>NÃO</b></td>
+              <td><b>NÃO</b></td>
+            </tr>
+
+            <tr>
+              <td></td>
+              <td><b>SIM</b></td>
+              <td><b>SIM</b></td>
+              <td><b>SIM</b></td>
+            </tr>
+
+            <tr>
+              <td></td>
+              <td><b>SIM</b></td>
+              <td><b>SIM</b></td>
+              <td><b>NÃO</b></td>
+            </tr>
+
+            <tr>
+              <td></td>
+              <td><b>NÃO</b></td>
+              <td><b>SIM</b></td>
+              <td><b>SIM</b></td>
+            </tr>
+
+            <tr>
+              <td></td>
+              <td><b>NÃO</b></td>
+              <td><b>SIM</b></td>
+              <td><b>SIM</b></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td><b>NÃO</b></td>
+              <td><b>NÃO</b></td>
+              <td><b>NÃO</b></td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+
+
+        <div class="horizontal-scroll">
+          <table class="table table-hover">
+            <thead>
+            <tr class="black-muted-bg">
+              <td><h2><b>CRAS - BARRA DO PIRAÍ - VARGEM ALEGRE </b></h2></td>
+            </tr>
+            </thead>
+          </table>
+        </div>
+
+
+        <div class="bs-example">
+          <table class="table table-condensed">
+            <thead>
+            <tr>
+              <th></th>
+              <th><b>JANEIRO/2016</b></th>
+              <th><b>MARÇO/2016</b></th>
+              <th><b>MAIO/2016</b></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+              <td></td>
+              <td><b>SIM</b></td>
+              <td><b>SIM</b></td>
+              <td><b>SIM</b></td>
+            </tr>
+
+            <tr>
+              <td></td>
+              <td><b>NÃO</b></td>
+              <td><b>SIM</b></td>
+              <td><b>SIM</b></td>
+            </tr>
+
+            <tr>
+              <td></td>
+              <td><b>SIM</b></td>
+              <td><b>NÃO</b></td>
+              <td><b>SIM</b></td>
+            </tr>
+
+            <tr>
+              <td></td>
+              <td><b>NÃO</b></td>
+              <td><b>NÃO</b></td>
+              <td><b>NÃO</b></td>
+            </tr>
+
+            <tr>
+              <td></td>
+              <td><b>NÃO</b></td>
+              <td><b>NÃO</b></td>
+              <td><b>NÃO</b></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td><b>NÃO</b></td>
+              <td><b>NÃO</b></td>
+              <td><b>NÃO</b></td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+        &nbsp;
+
+
         <div class="row">
           <div></div>
 
 
+          &nbsp;
           <div>
           <ba-card class="col-xl-6 col-xl-15"
                    title="FALE CONOSCO" baCardClass="feed-panel">
@@ -220,37 +428,26 @@
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">1. What is HTML?</a>
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><b>2. QUAIS OS DIAS E HORÁRIOS DE FUNCIONAMENTO DO CRAS?</b></a>
                 </h4>
               </div>
               <div id="collapseOne" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <p>HTML stands for HyperText Markup Language. HTML is the main markup language for describing the structure of Web pages. <a href="http://www.tutorialrepublic.com/html-tutorial/" target="_blank">Learn more.</a></p>
+                  <p>Dia: Segunda à Sexta - Hora: 08:00h às 18:00h. </p>
                 </div>
               </div>
             </div>
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">2. What is Bootstrap?</a>
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><b>3. QUAIS SÃO AS FAIXAS ETÁRIAS DO SERVIÇO DE CONVIVÊNCIA E FORTALECIMENTO DE VÍNCULOS?</b></a>
                 </h4>
               </div>
               <div id="collapseTwo" class="panel-collapse collapse in">
                 <div class="panel-body">
-                  <p>Bootstrap is a powerful front-end framework for faster and easier web development. It is a collection of CSS and HTML conventions. <a href="http://www.tutorialrepublic.com/twitter-bootstrap-tutorial/" target="_blank">Learn more.</a></p>
+                  <p><b> ------- </b></p>
                 </div>
               </div>
             </div>
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">3. What is CSS?</a>
-                </h4>
-              </div>
-              <div id="collapseThree" class="panel-collapse collapse">
-                <div class="panel-body">
-                  <p>CSS stands for Cascading Style Sheet. CSS allows you to specify various style properties for a given HTML element such as colors, backgrounds, fonts etc. <a href="http://www.tutorialrepublic.com/css-tutorial/" target="_blank">Learn more.</a></p>
-                </div>
-              </div>
-            </div>
-          </div>
+
+
