-Finalização do ba-card Indicadores Sociais

--- a/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
+++ b/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
@@ -1,27 +1,57 @@
 <div>
-  <ba-card title="Indicadores Sociais">
-    <div class="horizontal-scroll">
+
+  <div class="col-xl-3 col-lg-3 col-md-3">
+    <table>
+      <tr>
+        <td class="fonte">  BOLSA <p> FAMÍLIA</p> </td>
+      </tr>
+
+
+      <tr>
+        <td class="percentual"> 15,28% <p class="fonte2"> DA POPULAÇÃO </p> </td>
+      </tr>
+
+      <tr>
+        <td class="dados"> 4.204 <p class="fonte2"> FAMÍLIAS BENEFICIÁRIAS </p></td>
+      </tr>
+
+
+      <tr>
+        <td class="percentual"> 78,51% <p class="fonte2"> COBERTURA</p></td>
+      </tr>
+    </table>
+  </div>
+
+
+  <div>
 <table>
   <tr>
-    <p> CADASTRO ÚNICO </p>
-    <hr>  </tr>
+    <td class="fonte"> CADASTRO ÚNICO </td>
+    <td class="dados"> 7.753 <p class="fonte2"> FAMÍLIAS REGISTRADAS </p> </td>
+  </tr>
 
+  <hr>
   <tr>
-    <p> BENEFÍCIOS EVENTUAIS </p>
-    <hr>  </tr>
+    <td class="fonte"> BENEFÍCIOS EVENTUAIS </td>
+  </tr>
 
+  <hr>
   <tr>
-    <p> PAIF </p>
-    <hr>  </tr>
+     <td class="fonte"> PAIF </td>
+   </tr>
 
+  <hr>
   <tr>
-    <p> PAEFI </p>
-    <hr>  </tr>
-
-
+    <td class="fonte"> PAEFI </td>
+  </tr>
 </table>
-</div>
+
+  </div>
+
+  <hr class="linha-horizontal">
+  <p class="alinhacentro"> BENEFÍCIOS DE PRESTAÇÃO CONTINUADA <span class="dados"> 1.624 </span> </p>
+  <p class="alinhacentro2"> PESSOAS </p>
 
 
-  </ba-card>
+
 </div>
