--- a/src/app/pages/tela2/tela2.html
+++ b/src/app/pages/tela2/tela2.html
@@ -39,7 +39,10 @@
 
 </div>
 
-<div class="row">
-  <indicadores-sociais> </indicadores-sociais>
-</div>
 
+<div class="row">
+  <ba-card title="Indicadores Sociais" class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-xs-8">
+    <indicadores-sociais> </indicadores-sociais>
+  </ba-card>
+
+</div>
