-Criação do <ba-card> dados municipais, com informações sobre: população, IDH, pŕefeito e secretário de assistência social.

--- a/src/app/pages/tela1/typography/typography.html
+++ b/src/app/pages/tela1/typography/typography.html
@@ -8,13 +8,13 @@
 
           <hr color="white">
 
-          <p> O projeto pretende estruturar uma ação coordenada e estratégica do MPRJ</p>
-          <p> para fiscalizar e exigir a implementação adequada da Política de Assistência </p>
-          <p> Social, bem como provocar a intervenção dos atores sociais vocacionados</p>
-          <p> para esta política pública. </p>
+          <p> O projeto pretende estruturar uma ação coordenada e estratégica do MPRJ
+           para fiscalizar e exigir a implementação adequada da Política de Assistência
+          Social, bem como provocar a intervenção dos atores sociais vocacionados
+          para esta política pública. </p>
 
           <br>
-          <ul style="list-style-type:disc ">
+          <ul style="list-style-type:circle ">
             <li> Exigir a implementação integral da Política de Assistência Social; </li>
             <li> Construção de uma metodologia de trabalho nova; </li>
             <li> Criação de indicadores para dimensionamento da oferta e demanda; </li>
@@ -24,7 +24,6 @@
             <li> Articular parcerias com instâncias de controle social para fomentação da
               fiscalização do SUAS; </li>
           </ul>
-
 
 </div>
 
