--- a/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
+++ b/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
@@ -26,23 +26,23 @@
   <div>
 <table>
   <tr>
-    <td class="fonte"> CADASTRO ÚNICO </td>
+    <td class="fonte">  <i class="ion-clipboard"></i> CADASTRO ÚNICO </td>
     <td class="dados"> 7.753 <p class="fonte2"> FAMÍLIAS REGISTRADAS </p> </td>
   </tr>
 
   <hr>
   <tr>
-    <td class="fonte"> BENEFÍCIOS EVENTUAIS </td>
+    <td class="fonte">  <i class="ion-checkmark"></i> BENEFÍCIOS EVENTUAIS </td>
   </tr>
 
   <hr>
   <tr>
-     <td class="fonte"> PAIF </td>
+     <td class="fonte">  <i class="ion-checkmark"></i> PAIF </td>
    </tr>
 
   <hr>
   <tr>
-    <td class="fonte"> PAEFI </td>
+    <td class="fonte"> <i class="ion-close"></i> PAEFI </td>
   </tr>
 </table>
 
@@ -51,7 +51,6 @@
   <hr class="linha-horizontal">
   <p class="alinhacentro"> BENEFÍCIOS DE PRESTAÇÃO CONTINUADA <span class="dados"> 1.624 </span> </p>
   <p class="alinhacentro2"> PESSOAS </p>
-
 
 
 </div>
