--- a/src/app/pages/tela1/typography/typography.scss
+++ b/src/app/pages/tela1/typography/typography.scss
@@ -1,3 +1,13 @@
 .fonte{
   font-size: 20px;
 }
+
+p{
+  font-family: "Lato", Arial;
+  font-size: 15px;
+}
+
+li{
+  font-family: "Lato", Arial;
+  font-size: 15px;
+}
