--- a/src/app/pages/tela2/tela2.html
+++ b/src/app/pages/tela2/tela2.html
@@ -41,6 +41,10 @@
 
 
 <div class="row">
+  <ba-card title="Dados Municipais" class="col-xl-3 col-lg-4 col-md-4 col-sm-4 col-xs-4">
+    <dados-municipais> </dados-municipais>
+  </ba-card>
+
   <ba-card title="Indicadores Sociais" class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-xs-8">
     <indicadores-sociais> </indicadores-sociais>
   </ba-card>
