- Inserção dos ícones da primeira tela, e dos Indicadores Sociais ( tela2).

--- a/src/app/pages/tela1/legislacao/legislacao.html
+++ b/src/app/pages/tela1/legislacao/legislacao.html
@@ -4,26 +4,26 @@
     <tr class="black-muted-bg">
       <td class="legislacao-icons"> </td>
 
-      <td > <img src="{{ ( 'legislacao2'| baProfilePicture ) }}" width="30" height="30" > LEGISLAÇÃO <p> Relação e acesso à toda Legislação pertinente em relação <br>
+      <td > <img src="{{ ( 'legislacao'| baProfilePicture ) }}" width="40" height="50" > LEGISLAÇÃO <p> Relação e acesso à toda Legislação pertinente em relação <br>
             ao tema e norteadora dos indicadores do projeto </p> </td>
     </tr>
     </thead>
     <tbody>
 
     <tr class="no-top-border">
-      <td> <img src="{{ ( 'legislacao2'| baProfilePicture ) }}" width="30" height="30" > </td>
+      <td> <img src="{{ ( 'lei2'| baProfilePicture ) }}" width="30" height="30" > </td>
       <td> LEI FEDERAL <img src="{{ ( 'visualizar'| baProfilePicture ) }}" width="30" height="30" align="right"> </td>
 
     </tr>
 
     <tr class="no-top-border">
-      <td> <img src="{{ ( 'legislacao2'| baProfilePicture ) }}" width="30" height="30" > </td>
+      <td> <img src="{{ ( 'lei2'| baProfilePicture ) }}" width="30" height="30" > </td>
       <td> RESOLUÇÃO <img src="{{ ( 'visualizar'| baProfilePicture ) }}" width="30" height="30" align="right"> </td>
 
     </tr>
 
     <tr class="no-top-border">
-      <td> <img src="{{ ( 'legislacao2'| baProfilePicture ) }}" width="30" height="30" > </td>
+      <td> <img src="{{ ( 'lei2'| baProfilePicture ) }}" width="30" height="30" > </td>
       <td> JURISPRUDÊNCIA <img src="{{ ( 'visualizar'| baProfilePicture ) }}" width="30" height="30" align="right"> </td>
     </tr>
 
