--- a/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
+++ b/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
@@ -3,7 +3,8 @@
   <div class="col-xl-3 col-lg-3 col-md-3">
     <table>
       <tr>
-        <td class="fonte">  BOLSA <p> FAMÍLIA</p> </td>
+        <td class="fonte">  <img src="{{ ( 'bolsa-familia'| baProfilePicture ) }}" width="60" height="50" >
+          BOLSA <p class="alinhadir"> FAMÍLIA </td>
       </tr>
 
 
@@ -32,25 +33,29 @@
 
   <hr>
   <tr>
-    <td class="fonte">  <i class="ion-checkmark"></i> BENEFÍCIOS EVENTUAIS </td>
+    <td class="fonte">  <i class="ion-checkmark"></i> BENEFÍCIOS EVENTUAIS
+      <img class="alinhadir" src="{{ ( 'beneficios-eventuais'| baProfilePicture ) }}" width="30" height="25" > </td>
   </tr>
 
   <hr>
   <tr>
-     <td class="fonte">  <i class="ion-checkmark"></i> PAIF </td>
+     <td class="fonte">  <i class="ion-checkmark"></i> PAIF
+       <img class="alinhadir" src="{{ ( 'paif'| baProfilePicture ) }}" width="30" height="25" > </td>
    </tr>
 
   <hr>
   <tr>
-    <td class="fonte"> <i class="ion-close"></i> PAEFI </td>
+    <td class="fonte"> <i class="ion-close"></i> PAEFI
+      <img class="alinhadir" src="{{ ( 'paefi'| baProfilePicture ) }}" width="30" height="25" > </td>
   </tr>
 </table>
 
   </div>
 
   <hr class="linha-horizontal">
-  <p class="alinhacentro"> BENEFÍCIOS DE PRESTAÇÃO CONTINUADA <span class="dados"> 1.624 </span> </p>
-  <p class="alinhacentro2"> PESSOAS </p>
+  <p class="negrito"> <img src="{{ ( 'bpc'| baProfilePicture ) }}" width="35" height="30" >
+    BENEFÍCIOS DE PRESTAÇÃO CONTINUADA <span class="dados"> 1.624 </span> </p>
+  <p class="alinhacentro"> PESSOAS </p>
 
 
 </div>
