--- a/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.scss
+++ b/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.scss
@@ -13,21 +13,21 @@
  .dados{
    font-family: "Arial Black", arial-black;
    font-size: 20px;
-   color:darkblue;
+   color:midnightblue;
    text-align:right;
  }
 
  .totalequipamentos{
    font-family: "Arial Black", arial-black;
    font-size: 20px;
-   color:darkblue;
+   color:midnightblue;
    text-align: center;
 
  }
 .percentual{
   font-family: "Arial Black", arial-black;
   font-size: 20px;
-  color: orangered;
+  color: orange;
 }
 
 .equipamentos{
