Imagens de fundo - modifiquei o fundo - alterando (tipo de inspeção, Eixos, Município e equipamento) - alterando colunas - alterando colunas(1). - alterando colunas (1.2). - modificando(eixo equipe técnica) - (alterando tabela inteligente1.1) - (modificando tabela condensada e tabela inteligente) - (modificando parte fale conosco e perguntas frequentes 1.1) - (tabela condesada ok) - (imagens observatório ok) - (perguntas frequentes ok) - (manuais e cartilhas ok)

--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -15,13 +15,13 @@
   <div class="row">
     <ba-card class="col-xlg-6 col-xl-0"
           title=" NOVA INSPEÇÃO " baCardClass="small-card">
-      <b><h4> <td> <img src="{{ ( 'inspeção'| baProfilePicture ) }}" width="60" height="55">INICIAR UMA NOVA INSPEÇÃO EM UM ESTABELECIMENTO.</h4></b>
+      <b><h4> <td> <img src="{{ ( 'inspeção'| baProfilePicture ) }}" width="60" height="55">&nbsp;INICIAR UMA NOVA INSPEÇÃO EM UM ESTABELECIMENTO.</h4></b>
     </ba-card>
 
 
       <ba-card class="col-xlg-6 col-xl-0"
                title="VISUALIZAÇÃO DE INSPEÇÕES - FILTROS PARA SELEÇÃO" baCardClass="small-card">
-        <b> <h4> <img src="{{ ( 'filtro'| baProfilePicture ) }}" width="45" height="45">OS CAMPOS COM (*) SÃO CONSIDERADOS OBRIGATÓRIOS.</h4></b>
+        <b> <h4> <img src="{{ ( 'filtro'| baProfilePicture ) }}" width="45" height="45">&nbsp;&nbsp;OS CAMPOS COM (*) SÃO CONSIDERADOS OBRIGATÓRIOS.</h4></b>
       </ba-card>
     </div>
 
@@ -439,10 +439,23 @@
             &nbsp;
 
             <div class="form-group">
-            <textarea class="form-control" placeholder="Escreve aqui sua mensagem..."></textarea>
+              &nbsp;&nbsp; <textarea class="form-control" placeholder="Escreve aqui sua mensagem..."></textarea>
             </div>
             &nbsp;
-            <button type="submit" class="btn btn-success">&nbsp;&nbsp;&nbsp;ENVIAR&nbsp;&nbsp;&nbsp;</button>
+            &nbsp;&nbsp; <button type="submit" class="btn btn-success">&nbsp;&nbsp;&nbsp;ENVIAR&nbsp;&nbsp;&nbsp;</button>
+            <div>
+              &nbsp;
+
+              &nbsp;
+              <ba-card class="col-xl-12 col xl-0"
+              title="MANUAIS E CARTILHAS" baCardClass=""> &nbsp;&nbsp;&nbsp;<img src="{{ ( 'manuais'| baProfilePicture ) }}" width="45" height="45">
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="125" height="135">
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="125" height="135">
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="125" height="135">
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="125" height="135">
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'população'| baProfilePicture ) }}" width="125" height="135">
+              </ba-card>
+            </div>
           </ba-card>
           </div>
 
@@ -453,6 +466,7 @@
           title="PERGUNTAS FREQUENTES" baCardClass="">
 
               <div class="panel panel-default">
+                <img src="{{ ( 'faq'| baProfilePicture ) }}" width="45" height="45">
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h4><b>1. O QUE É CADASTRO ÚNICO?</b></h4></a>
               <div id="collapseOne" class="panel-collapse collapse">
                 <div class="panel-body">
@@ -488,7 +502,7 @@
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h4><b>3. QUAIS SÃO AS FAIXAS ETÁRIAS DO SERVIÇO DE CONVIVÊNCIA E FORTALECIMENTO DE VÍNCULOS?</b></h4></a>
                     <div id="collapseThree" class="panel-collapse collapse">
                       <div class="panel-body">
-                        <h3><b><i> ABCDEFGHIJ</i></b></h3>
+                        <h3><b><i>AAAAAA BBBBBB CCCCCC DDDDDD</i></b></h3>
                       </div>
                     </div>
 
@@ -498,8 +512,11 @@
                       <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h4><b>4. O QUE SÃO BENEFÍCIOS INDIVIDUAIS </b></h4></a>
                       <div id="collapseFour" class="panel-collapse collapse">
                         <div class="panel-body">
-                          <h3><b><i> AAAAAA BBBBBB CCCCCC DDDDDD</i></b></h3>
+                          <h3><b><i>AAAAAA BBBBBB CCCCCC DDDDDD</i></b></h3>
                         </div>
                       </div>
 
+
+
                       <hr color="white">
+
