-Ajuste da primeira tela.

--- a/src/app/pages/tela1/orcamento/orcamento.html
+++ b/src/app/pages/tela1/orcamento/orcamento.html
@@ -4,7 +4,8 @@
 
     <tr class="black-muted-bg">
       <td class="orcamento-icons"> </td>
-      <td> <img src="{{ ( 'orcamento'| baProfilePicture ) }}" width="40" height="50" > ORÇAMENTOS <p> Relação de orçamentos federais, <br> estaduais e municipais </p> </td>
+      <td> <img src="{{ ( 'orcamento'| baProfilePicture ) }}" width="40" height="50" > <b> ORÇAMENTOS </b> <br>
+        Relação de orçamentos federais, estaduais e municipais </td>
     </tr>
 
     </thead>
