--- a/src/app/pages/tela1/pecasAtuacao/pecasAtuacao.html
+++ b/src/app/pages/tela1/pecasAtuacao/pecasAtuacao.html
@@ -3,11 +3,11 @@
     <thead >
     <tr class="black-muted-bg">
       <td class="pecas-icons"> </td>
-      <td > <img src="{{ ( 'pecas-de-atuacao'| baProfilePicture ) }}" width="40" height="50" > PEÇAS DE ATUAÇÃO <p> Modelos padrão de documentos <br>  MPRJ para utilização pelos usuários </p> </td>
+      <td > <img src="{{ ( 'pecas-de-atuacao'| baProfilePicture ) }}" width="40" height="50" > <b> PEÇAS DE ATUAÇÃO </b> <br>
+        Modelos padrão de documentos  MPRJ para utilização pelos usuários </td>
     </tr>
     </thead>
     <tbody>
-
 
     <tr class="no-top-border">
       <td> <img src="{{ ( 'pecas-de-atuacao'| baProfilePicture ) }}" width="30" height="30" > </td>
