--- a/src/app/pages/tela2/tela2.html
+++ b/src/app/pages/tela2/tela2.html
@@ -1,4 +1,5 @@
 <div class="row">
+  <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <ba-card class="col-xl-3 col-lg-3 col-md-3">
    <rio-de-janeiro> </rio-de-janeiro>
     </ba-card>
@@ -9,6 +10,9 @@
 <div id="scroll">
   <municipios-buttons></municipios-buttons>
 </div>
+  </div>
+
+
   </div>
 </div>
 
