-Ajuste da primeira e da segunda tela.

--- a/src/app/pages/tela1/typography/typography.html
+++ b/src/app/pages/tela1/typography/typography.html
@@ -15,14 +15,15 @@
 
           <br>
           <ul style="list-style-type:circle ">
-            <li> Exigir a implementação integral da Política de Assistência Social; </li>
-            <li> Construção de uma metodologia de trabalho nova; </li>
-            <li> Criação de indicadores para dimensionamento da oferta e demanda; </li>
+            <li> Exigir a implementação integral da Política de Assistência Social; </li> &nbsp;
+            <li> Construção de uma metodologia de trabalho nova; </li> &nbsp;
+            <li> Criação de indicadores para dimensionamento da oferta e demanda; </li> &nbsp;
             <li> Estabelecer, mediante diálogo com todas as Tutelas Coletivas do MPRJ, padrões
-              de referência para avaliação da quantidade e qualidade dos serviços ofertados; </li>
-            <li> Monitorar os padrões de referência por meio de indicadores; </li>
+              de referência para avaliação da quantidade e qualidade dos serviços ofertados;
+            </li> &nbsp;
+            <li> Monitorar os padrões de referência por meio de indicadores; </li> &nbsp;
             <li> Articular parcerias com instâncias de controle social para fomentação da
-              fiscalização do SUAS; </li>
+              fiscalização do SUAS; </li> &nbsp;
           </ul>
 
 </div>
