--- a/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
+++ b/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
@@ -54,8 +54,6 @@
 
   <hr class="linha-horizontal">
   <p class="negrito"> <img src="{{ ( 'bpc'| baProfilePicture ) }}" width="35" height="30" >
-    BENEFÍCIOS DE PRESTAÇÃO CONTINUADA <span class="dados"> 1.624 </span> </p>
-  <p class="alinhacentro"> PESSOAS </p>
-
-
+    BENEFÍCIOS DE PRESTAÇÃO CONTINUADA <span class="dados"> 1.624 </span>
+    <span class="alinhacentro"> PESSOAS </span></p>
 </div>
